# x-docker-compose

./: README.md  main.py  pyproject.toml
samples/fake-project-1/: docker-compose.yml
samples/fake-project-2/: docker-compose.yml
