[tool.poetry]
name = "x-docker-compose"
version = "0.1.0"
description = ""
authors = ["Don Nguyen <ndon55555@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
docker-compose = "^1.29.2"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
